# vfriends

./: index.html  package.json  vite.config.ts
src/: App.vue  i18n.ts  invokes.ts  main.ts  style.css  types.ts  utils.ts  vrchat.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  pipeline.rs  utils.rs
src-tauri/src/auth/: event.rs  mod.rs  persistence.rs  state.rs
src-tauri/src/authv2/: commands.rs  events.rs  mod.rs  persistence.rs  service.rs  state.rs
src-tauri/src/config/: mod.rs  persistence.rs  types.rs
src-tauri/src/notifications/: image.rs  mod.rs  model.rs  platform.rs  preferences.rs  service.rs  sound.rs  store.rs
src-tauri/src/notifier/: aumid.rs  custom_sounds.rs  friend_online.rs  images.rs  mod.rs  windows.rs  windows_os.rs
src-tauri/src/settings/: mod.rs  store.rs  types.rs
src-tauri/src/shell/: mod.rs  startup.rs  tray.rs
src-tauri/src/utils/: dispatch_2fa_verification.rs  fetch_all_friends.rs  mod.rs  user_icons.rs
src-tauri/src/vrchat_utils/: friends_fetcher.rs  icon_fetcher.rs  mod.rs
src-tauri/src/websocket/: client.rs  mod.rs  refresh_friends.rs  state.rs  types.rs
src-tauri/src/websockets/: client.rs  mod.rs  parser.rs  types.rs
src/components/: AccountMenu.vue  DiscordJoinButton.vue  ShareOnTwitterButton.vue  StatusBadge.vue  TitleBar.vue  TitleBarSearch.vue  UserAvatar.vue  VrcAvatar.vue  VrcButton.vue  VrcFilePicker.vue  VrcInput.vue  VrcSelect.vue  VrcStatus.vue  VrcToggle.vue
src/components/title/: AccountButton.vue  AccountMenu.vue  SearchBox.vue  SearchStatusBar.vue  TitleBar.vue
src/composables/: useAppSettings.ts  useAuthFlow.ts  useAuthSession.ts  useAvatarUrl.ts  useDominantColor.ts  useFriendGrid.ts  useFriendNotifications.ts  useFriendSelection.ts  useFriendSelectionDrag.ts  useFriendSettings.ts  useFriendStatus.ts  useFriendWorld.ts  useFriends.ts  useNotificationSettings.ts
src/composables/notifications/: useNotificationPreferences.ts  useNotificationSettings.ts
src/data/: friends.ts  images.ts  notifications.ts
src/domain/: notifications.ts
src/i18n/: en.ts  ja.ts  messages.ts
src/ui/: dominantColor.ts
src/utils/: notificationSound.ts
src/views/auth/: Auth2FaPage.vue  AuthCredentialsPage.vue  AuthModal.vue  AuthStatusMessage.vue  AuthSuccessPage.vue  LoginWelcome.vue  LoginWelcomeOverlay.vue
src/views/friends/: FriendCard.vue  FriendsActionToast.vue  FriendsHeader.vue  FriendsList.vue  FriendsSelectionActions.vue  FriendsView.vue  types.ts
src/views/oobe/: Oobe.vue  OobeContent.vue
src/views/settings/: AppSettingsPage.vue  FriendSettingsPage.vue  LogoutConfirmButton.vue  NotificationPreview.vue  SettingsCard.vue  SettingsModal.vue  SettingsRow.vue  SettingsSidebar.vue  types.ts  useNotificationPreferences.ts  useNotificationSettings.ts
