[package]
name = "vfriends"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vfriends_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-frame = { git = "https://github.com/clarifei/tauri-plugin-frame", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vrchatapi = "1.20.6"
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
tokio = { version = "1", features = ["time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rodio = "0.20"
base64 = "0.22"
mime_guess = "2.0"
windows = { version = "0.62.2", features = ["Data", "Data_Xml", "Data_Xml_Dom", "UI", "UI_Notifications", "Win32_Foundation", "Win32_System_Com"] }
log = "0.4.29"
env_logger = "0.11.8"
cookie = "0.18.1"

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
windows-registry = "0.6"

[patch.crates-io]
enigo = { path = "vendor/enigo" }
